# internal/modules/store/presentation/controllers/category.go
@@ -4,23 +4,23 @@ import (
 	"net/http"
 
 	"github.com/dhanielsales/go-api-template/internal/modules/store/service"
+	"github.com/labstack/echo/v4"
 
-	"github.com/gofiber/fiber/v2"
 	"github.com/google/uuid"
 )
 
-func setupCategoryRoutes(r fiber.Router, controller *StoreController) {
+func setupCategoryRoutes(r *echo.Group, controller *StoreController) {
 	router := r.Group("/category")
 
 	// Setup middlewares here
 	// EX: router.Use(middleware)
 
 	// Setup routes here
-	router.Post("/", controller.createCategory)
-	router.Get("/", controller.getManyCategory)
-	router.Get("/:id", controller.getOneCategory)
-	router.Put("/:id", controller.updateCategory)
-	router.Delete("/:id", controller.deleteCategory)
+	router.POST("/", controller.createCategory)
+	router.GET("/", controller.getManyCategory)
+	router.GET("/:id", controller.getOneCategory)
+	router.PUT("/:id", controller.updateCategory)
+	router.DELETE("/:id", controller.deleteCategory)
 }
 
 type createCategoryRequest struct {
@@ -28,7 +28,7 @@ type createCategoryRequest struct {
 	Description string `json:"description,omitempty" validate:"min=1,max=300"`
 }
 
-// POST /api/v0/category
+// POST /api/v0/category/
 //
 // @Summary Create one category.
 // @Description creates one category.
@@ -41,28 +41,28 @@ type createCategoryRequest struct {
 // @Param Category body createCategoryRequest true "Category to create"
 // @Success		201 {object} int64
 // @Header		201,400,500	string		X-Conversational-ID	"Unique request ID."
-// @Failure		400					{object}	error.AppError	"Bad Request. Invalid request body."
-// @Failure		500					{object}	error.AppError	"Internal Server Error."
-// @Router /api/v0/category [post]
-func (t *StoreController) createCategory(c *fiber.Ctx) error {
+// @Failure		400					{object}	apperror.AppError	"Bad Request. Invalid request body."
+// @Failure		500					{object}	apperror.AppError	"Internal Server Error."
+// @Router /api/v0/category/ [post]
+func (t *StoreController) createCategory(c echo.Context) error {
 	var req createCategoryRequest
 
 	if err := t.validator.DecodeAndValidate(c, req); err != nil {
-		return t.http.ErrorHandler.Response(c, err)
+		return err
 	}
 
-	affected, err := t.service.CreateCategory(c.Context(), service.CreateCategoryPayload{
+	affected, err := t.service.CreateCategory(c.Request().Context(), service.CreateCategoryPayload{
 		Name:        req.Name,
 		Description: req.Description,
 	})
 	if err != nil {
-		return t.http.ErrorHandler.Response(c, err)
+		return err
 	}
 
-	return c.Status(fiber.StatusOK).JSON(affected)
+	return c.JSON(http.StatusCreated, affected)
 }
 
-// GET /api/v0/category
+// GET /api/v0/category/
 //
 // @Summary Get all categories.
 // @Description fetch every category available
@@ -74,22 +74,22 @@ func (t *StoreController) createCategory(c *fiber.Ctx) error {
 // @Param			Authorization		header		string					true	"Authorization JWT"
 // @Success 	200 				{object} []models.Category
 // @Header		200,500			string		X-Conversational-ID	"Unique request ID."
-// @Failure		500					{object}	error.AppError	"Internal Server Error."
-// @Router /api/v0/category [get]
-func (t *StoreController) getManyCategory(c *fiber.Ctx) error {
-	categories, err := t.service.GetManyCategory(c.Context(), service.GetManyCategoryParams{
-		Page:    c.Query("page"),
-		PerPage: c.Query("perPage"),
-		OrderBy: c.Query("orderBy"),
+// @Failure		500					{object}	apperror.AppError	"Internal Server Error."
+// @Router /api/v0/category/ [get]
+func (t *StoreController) getManyCategory(c echo.Context) error {
+	categories, err := t.service.GetManyCategory(c.Request().Context(), service.GetManyCategoryParams{
+		Page:    c.QueryParam("page"),
+		PerPage: c.QueryParam("perPage"),
+		OrderBy: c.QueryParam("orderBy"),
 	})
 	if err != nil {
-		return t.http.ErrorHandler.Response(c, err)
+		return err
 	}
 
-	return c.JSON(categories)
+	return c.JSON(http.StatusOK, categories)
 }
 
-// GET /api/v0/category/{id}
+// GET /api/v0/category/{id}/
 //
 // @Summary Get one category.
 // @Description fetch one category by id.
@@ -101,17 +101,17 @@ func (t *StoreController) getManyCategory(c *fiber.Ctx) error {
 // @Param			Authorization		header		string					true	"Authorization JWT"
 // @Param 		id path string true "Category ID"
 // @Header		200,500			string		X-Conversational-ID	"Unique request ID."
-// @Failure		500					{object}	error.AppError	"Internal Server Error."
+// @Failure		500					{object}	apperror.AppError	"Internal Server Error."
 // @Success 	200 				{object} 	models.Category
-// @Router /api/v0/category/{id} [get]
-func (t *StoreController) getOneCategory(c *fiber.Ctx) error {
-	id := uuid.MustParse(c.Params("id"))
-	category, err := t.service.GetCategoryByID(c.Context(), id)
+// @Router /api/v0/category/{id}/ [get]
+func (t *StoreController) getOneCategory(c echo.Context) error {
+	id := uuid.MustParse(c.Param("id"))
+	category, err := t.service.GetCategoryByID(c.Request().Context(), id)
 	if err != nil {
-		return t.http.ErrorHandler.Response(c, err)
+		return err
 	}
 
-	return c.JSON(category)
+	return c.JSON(http.StatusOK, category)
 }
 
 type updateCategoryRequest struct {
@@ -119,7 +119,7 @@ type updateCategoryRequest struct {
 	Description string `json:"description,omitempty" validate:"min=1,max=300"`
 }
 
-// PUT /api/v0/category
+// PUT /api/v0/category/
 //
 // @Summary Update one category.
 // @Description updates one category by id.
@@ -132,30 +132,30 @@ type updateCategoryRequest struct {
 // @Param Category body updateCategoryRequest true "Category to update"
 // @Success		200 {object} int64
 // @Header		200,400,500	string		X-Conversational-ID	"Unique request ID."
-// @Failure		400					{object}	error.AppError	"Bad Request. Invalid request body."
-// @Failure		500					{object}	error.AppError	"Internal Server Error."
+// @Failure		400					{object}	apperror.AppError	"Bad Request. Invalid request body."
+// @Failure		500					{object}	apperror.AppError	"Internal Server Error."
 // @Success 200 {object} int64
-// @Router /api/v0/category/{id} [put]
-func (t *StoreController) updateCategory(c *fiber.Ctx) error {
+// @Router /api/v0/category/{id}/ [put]
+func (t *StoreController) updateCategory(c echo.Context) error {
 	var req updateCategoryRequest
 
 	if err := t.validator.DecodeAndValidate(c, req); err != nil {
-		return t.http.ErrorHandler.Response(c, err)
+		return err
 	}
 
-	id := uuid.MustParse(c.Params("id"))
-	affected, err := t.service.UpdateCategory(c.Context(), id, service.UpdateCategoryPayload{
+	id := uuid.MustParse(c.Param("id"))
+	affected, err := t.service.UpdateCategory(c.Request().Context(), id, service.UpdateCategoryPayload{
 		Name:        req.Name,
 		Description: req.Description,
 	})
 	if err != nil {
-		return t.http.ErrorHandler.Response(c, err)
+		return err
 	}
 
-	return c.Status(http.StatusOK).JSON(affected)
+	return c.JSON(http.StatusOK, affected)
 }
 
-// DELETE /api/v0/category/{id}
+// DELETE /api/v0/category/{id}/
 //
 // @Summary Delete one category.
 // @Description deletes one category by id.
@@ -168,14 +168,14 @@ func (t *StoreController) updateCategory(c *fiber.Ctx) error {
 // @Param 		id path string true "Category ID"
 // @Success 	200 {object} int64
 // @Header		200,500			string		X-Conversational-ID	"Unique request ID."
-// @Failure		500					{object}	error.AppError	"Internal Server Error."
-// @Router /api/v0/category/{id} [delete]
-func (t *StoreController) deleteCategory(c *fiber.Ctx) error {
-	id := uuid.MustParse(c.Params("id"))
-	affected, err := t.service.DeleteCategory(c.Context(), id)
+// @Failure		500					{object}	apperror.AppError	"Internal Server Error."
+// @Router /api/v0/category/{id}/ [delete]
+func (t *StoreController) deleteCategory(c echo.Context) error {
+	id := uuid.MustParse(c.Param("id"))
+	affected, err := t.service.DeleteCategory(c.Request().Context(), id)
 	if err != nil {
-		return t.http.ErrorHandler.Response(c, err)
+		return err
 	}
 
-	return c.Status(http.StatusOK).JSON(affected)
+	return c.JSON(http.StatusOK, affected)
 }
