# internal/modules/store/presentation/controllers/product.go
@@ -4,23 +4,23 @@ import (
 	"net/http"
 
 	"github.com/dhanielsales/go-api-template/internal/modules/store/service"
+	"github.com/labstack/echo/v4"
 
-	"github.com/gofiber/fiber/v2"
 	"github.com/google/uuid"
 )
 
-func setupProductRoutes(r fiber.Router, controller *StoreController) {
+func setupProductRoutes(r *echo.Group, controller *StoreController) {
 	router := r.Group("/product")
 
 	// Setup middlewares here
 	// EX: router.Use(middleware)
 
 	// Setup routes here
-	router.Post("/", controller.createProduct)
-	router.Get("/", controller.getManyProduct)
-	router.Get("/:id", controller.getOneProduct)
-	router.Put("/:id", controller.updateProduct)
-	router.Delete("/:id", controller.deleteProduct)
+	router.POST("/", controller.createProduct)
+	router.GET("/", controller.getManyProduct)
+	router.GET("/:id", controller.getOneProduct)
+	router.PUT("/:id", controller.updateProduct)
+	router.DELETE("/:id", controller.deleteProduct)
 }
 
 type createProductRequest struct {
@@ -30,7 +30,7 @@ type createProductRequest struct {
 	CategoryID  string  `json:"category_id" validate:"required,uuid4"`
 }
 
-// POST /api/v0/product
+// POST /api/v0/product/
 //
 // @Summary Create one product.
 // @Description creates one product.
@@ -43,30 +43,30 @@ type createProductRequest struct {
 // @Param 		Product body createProductRequest true "Product to create"
 // @Success		201 {object} int64
 // @Header		201,400,500	string		X-Conversational-ID	"Unique request ID."
-// @Failure		400					{object}	error.AppError	"Bad Request. Invalid request body."
-// @Failure		500					{object}	error.AppError	"Internal Server Error."
-// @Router /api/v0/product [post]
-func (t *StoreController) createProduct(c *fiber.Ctx) error {
+// @Failure		400					{object}	apperror.AppError	"Bad Request. Invalid request body."
+// @Failure		500					{object}	apperror.AppError	"Internal Server Error."
+// @Router /api/v0/product/ [post]
+func (t *StoreController) createProduct(c echo.Context) error {
 	var req createProductRequest
 
 	if err := t.validator.DecodeAndValidate(c, req); err != nil {
-		return t.http.ErrorHandler.Response(c, err)
+		return err
 	}
 
-	affected, err := t.service.CreateProduct(c.Context(), service.CreateProductPayload{
+	affected, err := t.service.CreateProduct(c.Request().Context(), service.CreateProductPayload{
 		Name:        req.Name,
 		Description: req.Description,
 		Price:       req.Price,
 		CategotyID:  uuid.MustParse(req.CategoryID),
 	})
 	if err != nil {
-		return t.http.ErrorHandler.Response(c, err)
+		return err
 	}
 
-	return c.Status(http.StatusOK).JSON(affected)
+	return c.JSON(http.StatusCreated, affected)
 }
 
-// GET /api/v0/product
+// GET /api/v0/product/
 //
 // @Summary Get all categories.
 // @Description fetch every product available.
@@ -78,22 +78,22 @@ func (t *StoreController) createProduct(c *fiber.Ctx) error {
 // @Param			Authorization		header		string					true	"Authorization JWT"
 // @Success 	200 				{object} []models.Product
 // @Header		200,500			string		X-Conversational-ID	"Unique request ID."
-// @Failure		500					{object}	error.AppError	"Internal Server Error."
-// @Router /api/v0/product [get]
-func (t *StoreController) getManyProduct(c *fiber.Ctx) error {
-	categories, err := t.service.GetManyProduct(c.Context(), service.GetManyProductParams{
-		Page:    c.Query("page"),
-		PerPage: c.Query("perPage"),
-		OrderBy: c.Query("orderBy"),
+// @Failure		500					{object}	apperror.AppError	"Internal Server Error."
+// @Router /api/v0/product/ [get]
+func (t *StoreController) getManyProduct(c echo.Context) error {
+	categories, err := t.service.GetManyProduct(c.Request().Context(), service.GetManyProductParams{
+		Page:    c.QueryParam("page"),
+		PerPage: c.QueryParam("perPage"),
+		OrderBy: c.QueryParam("orderBy"),
 	})
 	if err != nil {
-		return t.http.ErrorHandler.Response(c, err)
+		return err
 	}
 
-	return c.JSON(categories)
+	return c.JSON(http.StatusOK, categories)
 }
 
-// GET /api/v0/product/{id}
+// GET /api/v0/product/{id}/
 //
 // @Summary Get one product.
 // @Description fetch one product by id.
@@ -106,16 +106,16 @@ func (t *StoreController) getManyProduct(c *fiber.Ctx) error {
 // @Param 		id path string true "Product ID"
 // @Success 	200 				{object} 	models.Product
 // @Header		200,500			string		X-Conversational-ID	"Unique request ID."
-// @Failure		500					{object}	error.AppError	"Internal Server Error."
-// @Router /api/v0/product/{id} [get]
-func (t *StoreController) getOneProduct(c *fiber.Ctx) error {
-	id := uuid.MustParse(c.Params("id"))
-	product, err := t.service.GetProductByID(c.Context(), id)
+// @Failure		500					{object}	apperror.AppError	"Internal Server Error."
+// @Router /api/v0/product/{id}/ [get]
+func (t *StoreController) getOneProduct(c echo.Context) error {
+	id := uuid.MustParse(c.Param("id"))
+	product, err := t.service.GetProductByID(c.Request().Context(), id)
 	if err != nil {
-		return t.http.ErrorHandler.Response(c, err)
+		return err
 	}
 
-	return c.JSON(product)
+	return c.JSON(http.StatusOK, product)
 }
 
 type updateProductRequest struct {
@@ -123,7 +123,7 @@ type updateProductRequest struct {
 	Description string `json:"description,omitempty" validate:"min=1,max=300"`
 }
 
-// PUT /api/v0/product
+// PUT /api/v0/product/
 //
 // @Summary Update one product.
 // @Description updates one product by id.
@@ -136,30 +136,30 @@ type updateProductRequest struct {
 // @Param Product body updateProductRequest true "Product to update"
 // @Success		200 {object} int64
 // @Header		200,400,500	string		X-Conversational-ID	"Unique request ID."
-// @Failure		400					{object}	error.AppError	"Bad Request. Invalid request body."
-// @Failure		500					{object}	error.AppError	"Internal Server Error."
+// @Failure		400					{object}	apperror.AppError	"Bad Request. Invalid request body."
+// @Failure		500					{object}	apperror.AppError	"Internal Server Error."
 // @Success 200 {object} int64
-// @Router /api/v0/product/{id} [put]
-func (t *StoreController) updateProduct(c *fiber.Ctx) error {
+// @Router /api/v0/product/{id}/ [put]
+func (t *StoreController) updateProduct(c echo.Context) error {
 	var req updateProductRequest
 
 	if err := t.validator.DecodeAndValidate(c, req); err != nil {
-		return t.http.ErrorHandler.Response(c, err)
+		return err
 	}
 
-	id := uuid.MustParse(c.Params("id"))
-	affected, err := t.service.UpdateProduct(c.Context(), id, service.UpdateProductPayload{
+	id := uuid.MustParse(c.Param("id"))
+	affected, err := t.service.UpdateProduct(c.Request().Context(), id, service.UpdateProductPayload{
 		Name:        req.Name,
 		Description: req.Description,
 	})
 	if err != nil {
-		return t.http.ErrorHandler.Response(c, err)
+		return err
 	}
 
-	return c.Status(http.StatusOK).JSON(affected)
+	return c.JSON(http.StatusOK, affected)
 }
 
-// DELETE /api/v0/product/{id}
+// DELETE /api/v0/product/{id}/
 //
 // @Summary Delete one product.
 // @Description deletes one product by id.
@@ -172,14 +172,14 @@ func (t *StoreController) updateProduct(c *fiber.Ctx) error {
 // @Param 		id path string true "Product ID"
 // @Success 	200 {object} int64
 // @Header		200,500			string		X-Conversational-ID	"Unique request ID."
-// @Failure		500					{object}	error.AppError	"Internal Server Error."
-// @Router /api/v0/product/{id} [delete]
-func (t *StoreController) deleteProduct(c *fiber.Ctx) error {
-	id := uuid.MustParse(c.Params("id"))
-	affected, err := t.service.DeleteProduct(c.Context(), id)
+// @Failure		500					{object}	apperror.AppError	"Internal Server Error."
+// @Router /api/v0/product/{id}/ [delete]
+func (t *StoreController) deleteProduct(c echo.Context) error {
+	id := uuid.MustParse(c.Param("id"))
+	affected, err := t.service.DeleteProduct(c.Request().Context(), id)
 	if err != nil {
-		return t.http.ErrorHandler.Response(c, err)
+		return err
 	}
 
-	return c.Status(http.StatusOK).JSON(affected)
+	return c.JSON(http.StatusOK, affected)
 }
